rubocop/examples/bad/Style_ClassCheck.rb
# TODO: This cop enforces consistent use of `Object#is_a?` or `Object#kind_of?`.
